# zqlz

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  typos.toml
crates/zqlz-admin/: Cargo.toml
crates/zqlz-admin/src/: zqlz_admin.rs
crates/zqlz-admin/src/rls/: mod.rs  service.rs  tests.rs
crates/zqlz-admin/src/role/: mod.rs  service.rs  tests.rs
crates/zqlz-admin/src/user/: mod.rs  service.rs  tests.rs
crates/zqlz-analyzer/: Cargo.toml
crates/zqlz-analyzer/src/: zqlz_analyzer.rs
crates/zqlz-analyzer/src/explain/: mod.rs  mysql.rs  plan.rs  postgres.rs  sqlite.rs
crates/zqlz-analyzer/src/suggestions/: analyzer.rs  mod.rs
crates/zqlz-app/: Cargo.toml  build.rs
crates/zqlz-app/assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
crates/zqlz-app/assets/themes/: 0x96f.json  0xtz.json  1984-theme.json  adaltas-theme.json  adaptify.json  adech.json  adventure.json  adwaita-pastel.json  adwaita.json  aesthetic-theme.json  aira.json  aizen-theme.json  alabaster-dark.json  alabaster.json  alduin.json  alpental-theme.json  amber-monochrome-monitor-crt-phosphor.json  andromeda.json  anthracite-theme.json  anysphere-theme.json  apisartisan.json  aquaflow-theme.json  aquarium-theme.json  arc-dark-theme.json  arctic-depth.json  ariake.json  ashen.json  asteroid.json  atomize.json  aylin-theme.json  aystra.json  ayu-darker.json  ayu-themes-glass.json  ayu.json  azutiku-theme.json  bamboo-theme.json  barbenheimer.json  base16.json  batman.json  beanseeds-pro.json  (+369 more)
crates/zqlz-app/resources/: README.md  zqlz.desktop.in  zqlz.entitlements
crates/zqlz-app/src/: actions.rs  app.rs  app_init.rs  app_menus.rs  assets.rs  bundled_themes.rs  icons.rs  ipc_server.rs  keymaps.rs  lib.rs  logging.rs  main.rs  panic_handler.rs  sql_lsp.rs  storage.rs  workspace_state.rs
crates/zqlz-cli/: Cargo.toml
crates/zqlz-cli/src/: cli.rs  ipc.rs  output.rs  standalone.rs
crates/zqlz-connection/: Cargo.toml
crates/zqlz-connection/src/: config.rs  health.rs  lib.rs  manager.rs  pool.rs  reconnect.rs  storage.rs
crates/zqlz-core/: Cargo.toml
crates/zqlz-core/src/: connection.rs  connection_security.rs  dialect.rs  dialect_config.rs  dialects.rs  driver.rs  error.rs  lib.rs  paths.rs  schema.rs  security.rs  transaction.rs  types.rs
crates/zqlz-driver-tests/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTCONTAINERS_IMPLEMENTATION.md  TESTCONTAINERS_STATUS.md  TEST_EXECUTION_STATUS.md  connection_tests.rs  datatype_json_tests.rs  datatype_tests.rs  delete_tests.rs  edge_case_boundary_tests.rs  edge_case_empty_results_tests.rs  edge_case_large_data_tests.rs  edge_case_special_chars_tests.rs  error_tests.rs  explain_tests.rs  fixtures.rs  insert_tests.rs  manage-test-env.sh  parameter_tests.rs  performance_tests.rs  pool_tests.rs  query_tests.rs  redis_tests.rs  schema_tests.rs  select_tests.rs  set_operations_tests.rs  ssl_tls_tests.rs  test_containers.rs  transaction_tests.rs  update_tests.rs  upsert_tests.rs  zqlz_driver_tests.rs
crates/zqlz-driver-tests/docker/: docker-compose.test.yml
crates/zqlz-drivers/: Cargo.toml
crates/zqlz-drivers/src/: lib.rs  registry.rs  runtime.rs
crates/zqlz-drivers/tests/: sqlite_tests.rs
crates/zqlz-editor/: Cargo.toml
crates/zqlz-editor/src/: bookmarks.rs  zqlz_editor.rs
crates/zqlz-editor/tests/: bookmark_storage_integration.rs
crates/zqlz-interchange/: Cargo.toml
crates/zqlz-interchange/src/: canonical_types.rs  csv_export.rs  csv_import.rs  document.rs  exporter.rs  importer.rs  type_mapping.rs  value_encoding.rs  zqlz_interchange.rs
crates/zqlz-lsp/: Cargo.toml
crates/zqlz-lsp/src/: command_tokenizer.rs  completion_cache.rs  completions.rs  context_analyzer.rs  diagnostics.rs  dialect.rs  fuzzy_matcher.rs  hover.rs  keywords.rs  parser_pool.rs  redis_validator.rs  schema_validator.rs  snippets.rs  sql_dialect.rs  zqlz_lsp.rs
crates/zqlz-monitor/: Cargo.toml
crates/zqlz-monitor/src/: zqlz_monitor.rs
crates/zqlz-objects/: Cargo.toml
crates/zqlz-objects/src/: zqlz_objects.rs
crates/zqlz-query/: Cargo.toml
crates/zqlz-query/src/: ai_completion.rs  engine.rs  error.rs  history.rs  schema_metadata.rs  service.rs  test_helpers.rs  view_models.rs  zqlz_query.rs
crates/zqlz-schema/: Cargo.toml
crates/zqlz-schema-tools/: Cargo.toml
crates/zqlz-schema-tools/src/: zqlz_schema_tools.rs
crates/zqlz-schema/src/: cache.rs  ddl.rs  zqlz_schema.rs
crates/zqlz-services/: Cargo.toml  FIXES.md
crates/zqlz-services/src/: connection_service.rs  error.rs  lib.rs  refresh_service.rs  schema_service.rs  table_design_service.rs  table_service.rs  view_models.rs
crates/zqlz-services/tests/: schema_service_tests.rs  table_service_tests.rs
crates/zqlz-settings/: Cargo.toml
crates/zqlz-settings/assets/: defaults.json
crates/zqlz-settings/src/: layout.rs  settings_file.rs  zqlz_settings.rs
crates/zqlz-table-designer/: Cargo.toml  PLAN.md
crates/zqlz-table-designer/src/: events.rs  panel.rs  table_designer.rs
crates/zqlz-templates/: Cargo.toml
crates/zqlz-templates/src/: dbt.rs  engine.rs  filters.rs  lib.rs  project.rs
crates/zqlz-text-editor/: Cargo.toml
crates/zqlz-text-editor/src/: actions.rs  buffer.rs  cursor.rs  display_map.rs  document.rs  editor_core.rs  element.rs  find.rs  find_replace_panel.rs  language_pipeline.rs  lsp.rs  selection.rs  snippet.rs  syntax.rs  text_editor.rs  vim.rs
crates/zqlz-trigger-designer/: Cargo.toml
crates/zqlz-trigger-designer/src/: events.rs  models.rs  panel.rs  trigger_designer.rs
crates/zqlz-ui/: Cargo.toml
crates/zqlz-ui/src/: fonts.rs  lib.rs
crates/zqlz-versioning/: Cargo.toml
crates/zqlz-versioning/src/: diff.rs  import_export.rs  lib.rs  object_types.rs  repository.rs  storage.rs
crates/zqlz-zed-adapter/: Cargo.toml
crates/zqlz-zed-adapter/src/: actions.rs  buffer_manager.rs  completion_menu.rs  editor_wrapper.rs  highlight_bridge.rs  language_init.rs  lsp_bridge.rs  settings_bridge.rs  theme_assets.rs  theme_bridge.rs  vim_support.rs  zqlz_zed_adapter.rs
(+553 files in other folders)
