[package]
name = "zqlz-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database server monitoring and performance metrics for ZQLZ"

[lib]
path = "src/zqlz_monitor.rs"

[dependencies]
zqlz-core = { path = "../zqlz-core" }
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json.workspace = true
