[package]
name = "zqlz-schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/zqlz_schema.rs"

[dependencies]
zqlz-core.workspace = true
zqlz-ui.workspace = true

gpui.workspace = true
async-trait.workspace = true
tokio.workspace = true
parking_lot.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
