[package]
name = "zqlz-services"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Core dependencies
zqlz-core = { path = "../zqlz-core" }
zqlz-drivers = { path = "../zqlz-drivers" }
zqlz-schema = { path = "../zqlz-schema" }
zqlz-connection = { path = "../zqlz-connection" }
zqlz-table-designer = { path = "../zqlz-table-designer" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4"] }
