[package]
name = "zqlz-settings"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/zqlz_settings.rs"

[dependencies]
gpui.workspace = true
zqlz-ui.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true
dirs = "5.0"
