[package]
name = "zqlz-templates"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
