[package]
name = "zqlz-trigger-designer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visual trigger designer panel for ZQLZ database IDE"

[lib]
path = "src/trigger_designer.rs"

[dependencies]
# Core ZQLZ crates
zqlz-core = { workspace = true }
zqlz-drivers = { workspace = true }
zqlz-ui = { workspace = true }

# GPUI
gpui = { workspace = true }

# Utilities
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async
async-trait = { workspace = true }

[dev-dependencies]
zqlz-drivers = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
indoc = { workspace = true }
