[package]
name = "zqlz-versioning"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
similar.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
zqlz-core.workspace = true
zqlz-schema-tools.workspace = true
zqlz-internal-storage.workspace = true

# UI dependencies
gpui.workspace = true
zqlz-ui.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
