[package]
name = "zqlz-driver-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "DuckDB driver for ZQLZ Database IDE"

[lib]
path = "src/zqlz_driver_duckdb.rs"

[dependencies]
zqlz-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
duckdb = { version = "1.0", features = ["bundled"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true
