[package]
name = "zqlz-driver-mssql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "MS SQL Server driver for ZQLZ Database IDE"

[lib]
path = "src/zqlz_driver_mssql.rs"

[dependencies]
zqlz-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tiberius.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
